# spa

./: .tokeignore  Cargo.toml  README.md  index.html  styles.css
src/: app.rs  lobby.rs  main.rs  table.rs  table_info.rs  util.rs  window.rs
src-tauri/: Cargo.toml  spa.conf.json  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json
src-tauri/src/: lib.rs  main.rs
tauri-command-types/: Cargo.toml
tauri-command-types/src/: lib.rs
