[package]
name = "spa-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["CustomEvent", "CustomEventInit", "BroadcastChannel", "MessageEvent"] }
js-sys = "0.3"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
gloo-utils = "0.2.0"
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", branch = "v2", optional = true, features = ["core", "event"] }
thiserror = "2"
derive_more = { version = "2.0", features = ["display", "error", "from"] }
gloo-events = "0.2.0"
tauri-command-types = { path = "tauri-command-types", version = "0.1.0" }
log = "0.4.27"
wasm-logger = "0.2.0"
yew-router = "0.18.0"
chrono = { version = "0.4.41" }
chrono-tz = "0.10"
futures = "0.3.31"

[workspace]
members = ["src-tauri"]

[workspace.package]
edition = "2024"
license = "UNLICENSE"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }

[features]
tauri = ["tauri-sys", "tauri-command-types/tauri"]
spa = ["tauri-command-types/spa"]
